--- a/Autocar-frontend/package.json
+++ b/Autocar-frontend/package.json
@@ -1,10 +1,13 @@
 {
+    "homepage": "https://vitorhugomacedo.githubpages.io/autocar",
     "name": "autocar-vue",
     "version": "3.8.0",
     "scripts": {
         "dev": "vite",
         "build": "vite build",
         "preview": "vite preview",
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d dist",
         "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
     },
     "dependencies": {
@@ -24,6 +27,7 @@
         "@vue/eslint-config-prettier": "^7.0.0",
         "eslint": "^8.22.0",
         "eslint-plugin-vue": "^9.3.0",
+        "gh-pages": "^6.1.1",
         "prettier": "^2.7.1",
         "sass": "^1.55.0",
         "vite": "^4.2.1"
